--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "index.js",
   "version": "0.2.11",
   "dependencies": {
-    "levenshtein": "*"
+    "speakeasy-nlp": "*"
   },
   "devDependencies": {
     "vows": "~0.8"
