--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "scripts": {
     "start": "node index.js"
   },
+  "dependencies": {
+    "express": "~4.10.2",
+    "body-parser": "~1.9.2",
+    "request": "^2.71.0"   
+  },
   "license": "MIT",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
   "repository": {
