--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "~4.10.2",
     "body-parser": "~1.9.2",
-    "request": "^2.71.0"   
+    "request": "^2.71.0",
+    "speakeasy-nlp":"*"
   },
   "license": "MIT",
   "author": "Nate Hunzaker <nate.hunzaker@gmail.com>",
